--- a/index.html
+++ b/index.html
@@ -11,5 +11,76 @@
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div id="main-container">
+        <div id="banner-container">
+          <img src="assets/img/banner2.png" alt="Crie uma conta no Instagram" />
+        </div>
+        <div id="form-container">
+          <div id="form-box">
+            <img src="assets/img/logo_instagram.png" alt="Instagram" />
+            <form id="login-form">
+              <input
+                type="text"
+                name="username"
+                id="username"
+                placeholder="Número de telefone, usuário ou email"
+              />
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Senha"
+              />
+              <input type="submit" value="Entrar" />
+            </form>
+            <div class="separator">
+              <div class="line"></div>
+              <span>Ou</span>
+            </div>
+            <div id="other-links">
+              <div id="facebook-login">
+                <img src="assets/img/logo_facebook.svg" alt="Facebook Login" />
+                <span>Entrar com o Facebook</span>
+              </div>
+              <div id="forgot-pass">
+                <a href="#">Esqueceu a senha?</a>
+              </div>
+            </div>
+          </div>
+          <div id="register-container">
+            <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
+          </div>
+          <div id="get-app-container">
+            <p>Obtenha o aplicativo.</p>
+            <a href="#">
+              <img src="assets/img/apple_btn.png" alt="Apple Store" />
+            </a>
+            <a href="#">
+              <img src="assets/img/gplay_btn.png" alt="Google Play" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <nav>
+        <ul id="footer-links">
+          <li><a href="#">Meta</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Ajuda</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Privacidade</a></li>
+          <li><a href="#">Termos</a></li>
+          <li><a href="#">Principais Contas</a></li>
+          <li><a href="#">Hashtags</a></li>
+          <li><a href="#">Localização</a></li>
+          <li><a href="#">Instagram Lite</a></li>
+        </ul>
+      </nav>
+      <p id="copyright">&copy;2024 Instagram from Meta</p>
+    </footer>
+  </body>
 </html>
