feat: add initial form styles css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         </div>
         <div id="form-container">
           <div id="form-box">
-            <img src="assets/img/logo_instagram.png" alt="Instagram" />
+            <img
+              src="assets/img/logo_instagram.png"
+              alt="Instagram"
+              id="logo-insta"
+            />
             <form id="login-form">
               <input
                 type="text"
